--- a/index.html
+++ b/index.html
@@ -40,13 +40,20 @@
 					</ul>
 				</nav>
 				<ul class="flex contacts-list-top">
-					<li class="contacts-item">
-						<a class="contacts" href="mailto:info@devstudio.com">
+					<li class="contacts-item flex">
+						<a class="contacts flex" href="mailto:info@devstudio.com">
+							<svg class="contacts-icon" width="16" height="12">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
 							info@devstudio.com
 						</a>
 					</li>
 					<li class="contacts-item">
-						<a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="contacts flex" href="tel:+380961111111">
+							<svg class="contacts-icon" width="10" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11</a>
 					</li>
 				</ul>
 			</div>
@@ -65,6 +72,11 @@
 					<h2 class="title-features">Особливості</h2>
 					<ul class="flex features-list">
 						<li class="features-list-item">
+							<div class="features-icon-item flex">
+								<svg class="features-icons" width="70" height="70">
+									<use href="./images/icons.svg#icon-antenna"></use>
+								</svg>
+							</div>
 							<h3 class="subtitle-features">УВАГА ДО ДЕТАЛЕЙ</h3>
 							<p class="desc-features">
 								Ідейні міркування, і навіть початок повсякденної роботи з
@@ -72,6 +84,11 @@
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-icon-item flex">
+								<svg class="features-icons" width="70" height="70">
+									<use href="./images/icons.svg#icon-clock"></use>
+								</svg>
+							</div class="features-icon-item flex" >
 							<h3 class="subtitle-features">ПУНКТУАЛЬНІСТЬ</h3>
 							<p class="desc-features">
 								Завдання організації, особливо рамки і місце навчання кадрів
@@ -79,12 +96,22 @@
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-icon-item flex" >
+								<svg class="features-icons" width="70" height="70">
+									<use href="./images/icons.svg#icon-diagram"></use>
+								</svg>
+							</div>
 							<h3 class="subtitle-features">ПЛАНУВАННЯ</h3>
 							<p class="desc-features">
 								Так само консультація з широким активом значною мірою зумовлює.
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-icon-item flex" >
+								<svg class="features-icons" width="70" height="70">
+									<use href="./images/icons.svg#icon-astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="subtitle-features">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 							<p class="desc-features">
 								Значимість цих проблем настільки очевидна, що реалізація
@@ -138,9 +165,55 @@
 								width="270"
 								height="260"
 							/>
-							<div class="team-desk">
+							<div class="team-desk">								
 								<h3 class="team-members">Ігор Дем'яненко</h3>
 								<p class="job-title" lang="en">Product Designer</p>
+								<ul class="socials flex">
+									<li>
+										<a class="social-link flex"
+										href="https://www.instagram.com/"
+										aria-label="Instagram"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://twitter.com"
+										aria-label="Twitter"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://facebook.com"
+										aria-label="Facebook"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://linkedin.com"
+										aria-label="Linkedin"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -153,6 +226,52 @@
 							<div class="team-desk">
 								<h3 class="team-members">Ольга Рєпіна</h3>
 								<p class="job-title" lang="en">Frontend Developer</p>
+								<ul class="socials flex">
+									<li>
+										<a class="social-link flex"
+										href="https://www.instagram.com/"
+										aria-label="Instagram"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://twitter.com"
+										aria-label="Twitter"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://facebook.com"
+										aria-label="Facebookr"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://linkedin.com"
+										aria-label="Linkedin"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -165,6 +284,52 @@
 							<div class="team-desk">
 								<h3 class="team-members">Микола Тарасов</h3>
 								<p class="job-title" lang="en">Marketing</p>
+								<ul class="socials flex">
+									<li>
+										<a class="social-link flex"
+										href="https://www.instagram.com/"
+										aria-label="Instagram"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://twitter.com"
+										aria-label="Twitter"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://facebook.com"
+										aria-label="Facebookr"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://linkedin.com"
+										aria-label="Linkedin"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="team-card">
@@ -177,37 +342,196 @@
 							<div class="team-desk">
 								<h3 class="team-members">Михайло Єрмаков</h3>
 								<p class="job-title" lang="en">UI Designer</p>
+								<ul class="socials flex">
+									<li>
+										<a class="social-link flex"
+										href="https://www.instagram.com/"
+										aria-label="Instagram"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://twitter.com"
+										aria-label="Twitter"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://facebook.com"
+										aria-label="Facebookr"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li>
+										<a class="social-link flex" 
+										href="https://linkedin.com"
+										aria-label="Linkedin"
+										target="_blank"
+										rel="noreferrer noopener">
+											<svg class="" width="20" height="20">
+												<use href="./images/icons.svg#icon-linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="section">
+				<div class="container">
+					<h2 class="section-tittle" >Постійні кліенти</h2>
+					<ul class="flex">
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-1"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-1-clients"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-2"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-2-clients"></use>
+								</svg>
+							</a></li>
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-3"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-3-clients"></use>
+								</svg>
+							</a></li>
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-4"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-4-clients"></use>
+								</svg>
+							</a></li>
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-5"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-5-clients"></use>
+								</svg>
+							</a></li>
+						<li class="clients-list-item">
+							<a href=""
+							aria-label="Client-6"
+										target="_blank"
+										rel="noreferrer noopener">
+								<svg class="clients-icon" width="170" height="92">
+									<use href="./images/icons.svg#icon-Logo-6-clients"></use>
+								</svg>
+							</a></li>
 					</ul>
 				</div>
 			</section>
 		</main>
 		<!--Секція Підвал-->
 		<footer class="footer">
-			<div class="container footer-container">
+			<div class="container flex">
 				<!-- prettier-ignore -->
-				<a class="logo logo-footer" href="./index.html">
-					<span class="web">Web</span>Studio</a>
-				<address class="footer-address">
-					<ul>
-						<li class="footer-list-item">
-							<a class="city-address" href="">
-								м. Київ, пр-т Лесі Українки, 26
+				<div class="footer-contacts-item">
+					<a class="logo logo-footer" href="./index.html">
+						<span class="web">Web</span>Studio</a>
+					<address class="footer-address">
+						<ul>
+							<li class="footer-list-item">
+								<a class="city-address" href="">
+									м. Київ, пр-т Лесі Українки, 26
+								</a>
+							</li>
+							<li class="footer-list-item">
+								<a class="contacts-footer" href="mailto:info@devstudio.com">
+									info@devstudio.com
+								</a>
+							</li>
+							<li class="footer-list-item">
+								<a class="contacts-footer" href="tel:+380961111111">
+									+38 096 111 11 11
+								</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+				<div class="footer-links">
+					<h3 class="footer-link-headline">Приєднуйтесь</h3>
+					<ul class="socials flex">
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://www.instagram.com/"
+							aria-label="Instagram"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
 							</a>
 						</li>
-						<li class="footer-list-item">
-							<a class="contacts-footer" href="mailto:info@devstudio.com">
-								info@devstudio.com
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://twitter.com"
+							aria-label="Twitter"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
 							</a>
 						</li>
-						<li class="footer-list-item">
-							<a class="contacts-footer" href="tel:+380961111111">
-								+38 096 111 11 11
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://facebook.com"
+							aria-label="Facebookr"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://linkedin.com"
+							aria-label="Linkedin"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
 							</a>
 						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
