--- a/portfolio.html
+++ b/portfolio.html
@@ -21,16 +21,16 @@
 			<div class="flex container">
 				<nav class="flex site-nav">
 					<!-- prettier-ignore -->
-					<a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
-
+					<a class="logo" href="./index.html">
+						<span class="web">Web</span>Studio</a>
 					<ul class="flex nav-list">
 						<li class="nav-list-item">
-							<a class="nav-link" href="./index.html">Студія</a>
+							<a class="nav-link" href="./index.html">
+								Студія
+							</a>
 						</li>
 						<li class="nav-list-item">
-							<a class="nav-link nav-link-current" href="./portfolio.html">
-								Портфоліо
-							</a>
+							<a class="nav-link  nav-link-current" href="./portfolio.html">Портфоліо</a>
 						</li>
 						<li class="nav-list-item">
 							<a class="nav-link" href="#">Контакти</a>
@@ -38,13 +38,20 @@
 					</ul>
 				</nav>
 				<ul class="flex contacts-list-top">
-					<li class="contacts-item">
+					<li class="contacts-item flex">
 						<a class="contacts" href="mailto:info@devstudio.com">
+							<svg class="contacts-icon" width="16" height="12">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
 							info@devstudio.com
 						</a>
 					</li>
 					<li class="contacts-item">
-						<a class="contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="contacts flex" href="tel:+380961111111">
+							<svg class="contacts-icon" width="10" height="16">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11</a>
 					</li>
 				</ul>
 			</div>
@@ -187,29 +194,80 @@
 		</main>
 		<!--Підвал-->
 		<footer class="footer">
-			<div class="container footer-container">
+			<div class="container flex">
 				<!-- prettier-ignore -->
-				<a class="logo logo-footer" href="./index.html">
-					<span class="web">Web</span>Studio</a>
-				<address class="footer-address">
-					<ul>
-						<li class="footer-list-item">
-							<a class="city-address" href="">
-								м. Київ, пр-т Лесі Українки, 26
+				<div class="footer-contacts-item">
+					<a class="logo logo-footer" href="./index.html">
+						<span class="web">Web</span>Studio</a>
+					<address class="footer-address">
+						<ul>
+							<li class="footer-list-item">
+								<a class="city-address" href="">
+									м. Київ, пр-т Лесі Українки, 26
+								</a>
+							</li>
+							<li class="footer-list-item">
+								<a class="contacts-footer" href="mailto:info@devstudio.com">
+									info@devstudio.com
+								</a>
+							</li>
+							<li class="footer-list-item">
+								<a class="contacts-footer" href="tel:+380961111111">
+									+38 096 111 11 11
+								</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+				<div class="footer-links">
+					<h3 class="footer-link-headline">Приєднуйтесь</h3>
+					<ul class="socials flex">
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://www.instagram.com/"
+							aria-label="Instagram"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
 							</a>
 						</li>
-						<li class="footer-list-item">
-							<a class="contacts-footer" href="mailto:info@devstudio.com">
-								info@devstudio.com
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://twitter.com"
+							aria-label="Twitter"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
 							</a>
 						</li>
-						<li class="footer-list-item">
-							<a class="contacts-footer" href="tel:+380961111111">
-								+38 096 111 11 11
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://facebook.com"
+							aria-label="Facebookr"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li>
+							<a class="social-link social-footer flex"
+							href="https://linkedin.com"
+							aria-label="Linkedin"
+							target="_blank"
+							rel="noreferrer noopener">
+								<svg class="" width="20" height="20">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
 							</a>
 						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
