--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 							<svg class="contacts-icon" width="10" height="16">
 								<use href="./images/icons.svg#icon-smartphone"></use>
 							</svg>
-							+38 096 111 11 11</a>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -88,7 +89,7 @@
 								<svg class="features-icons" width="70" height="70">
 									<use href="./images/icons.svg#icon-clock"></use>
 								</svg>
-							</div class="features-icon-item flex" >
+							</div>
 							<h3 class="subtitle-features">ПУНКТУАЛЬНІСТЬ</h3>
 							<p class="desc-features">
 								Завдання організації, особливо рамки і місце навчання кадрів
@@ -96,7 +97,7 @@
 							</p>
 						</li>
 						<li class="features-list-item">
-							<div class="features-icon-item flex" >
+							<div class="features-icon-item flex">
 								<svg class="features-icons" width="70" height="70">
 									<use href="./images/icons.svg#icon-diagram"></use>
 								</svg>
@@ -107,7 +108,7 @@
 							</p>
 						</li>
 						<li class="features-list-item">
-							<div class="features-icon-item flex" >
+							<div class="features-icon-item flex">
 								<svg class="features-icons" width="70" height="70">
 									<use href="./images/icons.svg#icon-astronaut"></use>
 								</svg>
@@ -165,49 +166,57 @@
 								width="270"
 								height="260"
 							/>
-							<div class="team-desk">								
+							<div class="team-desk">
 								<h3 class="team-members">Ігор Дем'яненко</h3>
 								<p class="job-title" lang="en">Product Designer</p>
 								<ul class="socials flex">
 									<li>
-										<a class="social-link flex"
-										href="https://www.instagram.com/"
-										aria-label="Instagram"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://www.instagram.com/"
+											aria-label="Instagram"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://twitter.com"
-										aria-label="Twitter"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://twitter.com"
+											aria-label="Twitter"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://facebook.com"
-										aria-label="Facebook"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://facebook.com"
+											aria-label="Facebook"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://linkedin.com"
-										aria-label="Linkedin"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://linkedin.com"
+											aria-label="Linkedin"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -228,44 +237,52 @@
 								<p class="job-title" lang="en">Frontend Developer</p>
 								<ul class="socials flex">
 									<li>
-										<a class="social-link flex"
-										href="https://www.instagram.com/"
-										aria-label="Instagram"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://www.instagram.com/"
+											aria-label="Instagram"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://twitter.com"
-										aria-label="Twitter"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://twitter.com"
+											aria-label="Twitter"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://facebook.com"
-										aria-label="Facebookr"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://facebook.com"
+											aria-label="Facebookr"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://linkedin.com"
-										aria-label="Linkedin"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://linkedin.com"
+											aria-label="Linkedin"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -286,44 +303,52 @@
 								<p class="job-title" lang="en">Marketing</p>
 								<ul class="socials flex">
 									<li>
-										<a class="social-link flex"
-										href="https://www.instagram.com/"
-										aria-label="Instagram"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://www.instagram.com/"
+											aria-label="Instagram"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://twitter.com"
-										aria-label="Twitter"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://twitter.com"
+											aria-label="Twitter"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://facebook.com"
-										aria-label="Facebookr"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://facebook.com"
+											aria-label="Facebookr"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://linkedin.com"
-										aria-label="Linkedin"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://linkedin.com"
+											aria-label="Linkedin"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -344,44 +369,52 @@
 								<p class="job-title" lang="en">UI Designer</p>
 								<ul class="socials flex">
 									<li>
-										<a class="social-link flex"
-										href="https://www.instagram.com/"
-										aria-label="Instagram"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://www.instagram.com/"
+											aria-label="Instagram"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://twitter.com"
-										aria-label="Twitter"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://twitter.com"
+											aria-label="Twitter"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://facebook.com"
-										aria-label="Facebookr"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://facebook.com"
+											aria-label="Facebookr"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
 									<li>
-										<a class="social-link flex" 
-										href="https://linkedin.com"
-										aria-label="Linkedin"
-										target="_blank"
-										rel="noreferrer noopener">
+										<a
+											class="social-link flex"
+											href="https://linkedin.com"
+											aria-label="Linkedin"
+											target="_blank"
+											rel="noreferrer noopener"
+										>
 											<svg class="" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -393,65 +426,89 @@
 					</ul>
 				</div>
 			</section>
+			<!-- Постійні кліенти -->
 			<section class="section">
 				<div class="container">
-					<h2 class="section-tittle" >Постійні кліенти</h2>
-					<ul class="flex">
+					<h2 class="section-tittle">Постійні кліенти</h2>
+					<ul class="client-list flex">
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-1"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-1"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-1-clients"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-2"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-2"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-2-clients"></use>
 								</svg>
-							</a></li>
+							</a>
+						</li>
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-3"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-3"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-3-clients"></use>
 								</svg>
-							</a></li>
+							</a>
+						</li>
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-4"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-4"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-4-clients"></use>
 								</svg>
-							</a></li>
+							</a>
+						</li>
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-5"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-5"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-5-clients"></use>
 								</svg>
-							</a></li>
+							</a>
+						</li>
 						<li class="clients-list-item">
-							<a href=""
-							aria-label="Client-6"
-										target="_blank"
-										rel="noreferrer noopener">
-								<svg class="clients-icon" width="170" height="92">
+							<a
+								class="clients-link"
+								href=""
+								aria-label="Client-6"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<svg class="clients-icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-Logo-6-clients"></use>
 								</svg>
-							</a></li>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</section>
@@ -487,44 +544,52 @@
 					<h3 class="footer-link-headline">Приєднуйтесь</h3>
 					<ul class="socials flex">
 						<li>
-							<a class="social-link social-footer flex"
-							href="https://www.instagram.com/"
-							aria-label="Instagram"
-							target="_blank"
-							rel="noreferrer noopener">
+							<a
+								class="social-link social-footer flex"
+								href="https://www.instagram.com/"
+								aria-label="Instagram"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
 								<svg class="" width="20" height="20">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="social-link social-footer flex"
-							href="https://twitter.com"
-							aria-label="Twitter"
-							target="_blank"
-							rel="noreferrer noopener">
+							<a
+								class="social-link social-footer flex"
+								href="https://twitter.com"
+								aria-label="Twitter"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
 								<svg class="" width="20" height="20">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="social-link social-footer flex"
-							href="https://facebook.com"
-							aria-label="Facebookr"
-							target="_blank"
-							rel="noreferrer noopener">
+							<a
+								class="social-link social-footer flex"
+								href="https://facebook.com"
+								aria-label="Facebookr"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
 								<svg class="" width="20" height="20">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li>
-							<a class="social-link social-footer flex"
-							href="https://linkedin.com"
-							aria-label="Linkedin"
-							target="_blank"
-							rel="noreferrer noopener">
+							<a
+								class="social-link social-footer flex"
+								href="https://linkedin.com"
+								aria-label="Linkedin"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
 								<svg class="" width="20" height="20">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
